# marker

./: .dockerignore  .gitignore  README.md  benchmark.py  convert_single.py  entrypoint.sh  front_end.py  j.jseaes.2015.01.006.md  local-prod.env  prod.env  pyproject.toml  run-docker.sh  service.py  service_gunicorn.py  vllm.md
client/: arxive_client.py  config.ini  config_reader.py  daily_paper_main.py  http_client.py  main.py  marker_client.py  presigned_client.py  s3_client.py  structure.py
docker/: Dockerfile  build.sh  run-docker.sh
marker/: bbox.py  convert.py  extract_text.py  logger.py  markdown.py  models.py  ordering.py  schema.py  segmentation.py  service.py  settings.py
marker/analyzer/: spans.py
marker/benchmark/: metrics.py
marker/cleaners/: code.py  equations.py  equations_texify.py  headers.py  nougat.py  picture.py  pix2tex_cli.py  table.py  utils.py
marker/ocr/: page.py  utils.py
marker/service/func/: common_func.py  files_func.py  parser_func.py
marker/service/routers/: analyze.py  files.py  health_check.py  parser.py
marker/service/struct/: analyze_struct.py  files_struct.py  parser_struct.py
scripts/install/: ghostscript_install.sh  tesseract_5_install.sh
